--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </style>
 <body style="background-attachment:fixed" topmargin="0">
 <!-- partial:index.partial.html -->
-<a href="#">
+<a href="https://fixxelru.github.io/WebSite/g.html">
   <span>Скачать</span>
   <div class="liquid"></div>
 </a>
