--- a/g.html
+++ b/g.html
@@ -20,8 +20,8 @@
       <nav>
         <h2>Menu</h2>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Download</a></li>
+          <li><a href="https://fixxelru.github.io/WebSite/g.html">Home</a></li>
+          <li><a href="https://fixxelru.github.io/WebSite/i.html">Download</a></li>
           <li><a href="#">My Telegram</a></li>
         </ul>
         <svg id="hand" viewBox="0 0 384 2048">
