--- a/g.html
+++ b/g.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="https://fixxelru.github.io/WebSite/g.html">Home</a></li>
           <li><a href="https://fixxelru.github.io/WebSite/404.html">Download</a></li>
-          <li><a href="#">My Telegram</a></li>
+          <li><a href="https://fixxelru.github.io/WebSite/404.html">My Telegram</a></li>
         </ul>
         <svg id="hand" viewBox="0 0 384 2048">
           <path d="M136 0c23 0 43 21 43 45v100c18-17 50-19 71 6 23-14 53-2 63 16 49-9 71 22 71 73v16c0 62-31 77-38 124-2 11-12 20-24 20H150c-18 0-36-11-43-28-13-29-49-96-78-108-18-8-29-21-29-40 0-34 35-58 67-44 8 4 17 8 25 14V45c0-24 20-45 44-45zm0 416h192c13 0 24 11 24 24v48c0 13-11 24-24 24H136c-13 0-24-11-24-24v-48c0-13 11-24 24-24zm168 28c-11 0-20 9-20 20s9 20 20 20 20-9 20-20-9-20-20-20zM338 2048H126V552c0-13 11-24 24-24h164c13 0 24 11 24 24v1496z"></path>
