--- a/g.html
+++ b/g.html
@@ -20,7 +20,7 @@
       <nav>
         <h2>Menu</h2>
         <ul>
-          <li><a href="https://fixxelru.github.io/WebSite/g.html">Home</a></li>
+          <li><a href="https://fixxelru.github.io/WebSite/">Home</a></li>
           <li><a href="https://fixxelru.github.io/WebSite/404.html">Download</a></li>
           <li><a href="https://fixxelru.github.io/WebSite/404.html">My Telegram</a></li>
         </ul>
